# llm-deepseek-ya

./: LICENSE  README.md  deploy.sh  llm_deepseek.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_deepseek.py
tests/cassettes/test_deepseek/: test_cli_deepseek_models.yaml  test_json_response_format.yaml  test_nested_model_deep_composition.yaml  test_nested_model_direct_reference.yaml  test_nested_model_optional.yaml  test_prefill_option.yaml  test_prompt.yaml  test_prompt_with_multiple_dogs.yaml  test_prompt_with_pydantic_schema.yaml  test_reasoner_model.yaml  test_reasoner_model_hide_reasoning.yaml
